fix spell list overflow on single column view
margin -100% is not enough for hiding section with padding
all hiding margins are set to -150%

 Changes to be committed:
	modified:   css/dev/offcanvas.less
	modified:   css/offcanvas.min.css

--- a/css/dev/offcanvas.less
+++ b/css/dev/offcanvas.less
@@ -50,23 +50,6 @@ body {
 }
 
 /* baseline layout (mostly used in single column) */
-/*
-[role="spell-list"]:before,
-[role="spell-list"]:after {
-  content: " ";
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 100%;
-  background: rgba(255,0,0,.3);
-}
-[role="spell-list"]:after {
-  left: 100%;
-  background: rgba(0,0,255,.3);
-}
-*/
 
 [role="filter-menu"],
 [role="spell-list"],
@@ -83,7 +66,7 @@ body {
 // best I could do is set width of spell-img and align left
 [role="filter-menu"] {
   min-width: 300px;
-  margin-left: -100%;
+  margin-left: -150%;
   float: left;
   z-index: 2;
 }
@@ -94,7 +77,7 @@ body {
   z-index: 1;
 }
 [role="spell-img"] {
-  margin-right: -100%;
+  margin-right: -150%;
   float: right;
   z-index: 2;
 }
@@ -105,11 +88,11 @@ body {
   margin-right: -90%;
 }
 .active-nav [role="spell-img"] {
-  margin-right: -100%;
+  margin-right: -150%;
   float: right;
 }
 .active-spell [role="filter-menu"] {
-  margin-left: -200%;
+  margin-left: -150%;
 }
 .active-spell [role="spell-list"] {
   margin-left: -90%;
@@ -148,13 +131,13 @@ body {
     float: left;
   }
   .active-spell [role="filter-menu"] {
-    margin-left: -100%;
+    margin-left: -150%;
   }
   .active-spell [role="spell-list"] {
     margin-left: 0;
   }
   .active-spell [role="spell-img"] {
-    margin-right: -100%;
+    margin-right: -150%;
     width: 300px;
   }
 }
